--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "dependencies": {
-    "expo": "^43.0.0",
+    "@expo/vector-icons": "^12.0.5",
+    "expo": "^43.0.4",
     "expo-app-loading": "~1.2.1",
     "expo-font": "~10.0.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-google-places-autocomplete": "^2.4.1",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "0.17.1",
+    "yarn": "^1.22.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
